--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Git in a group</title>
 </head>
 <body>
+    <header></header>
+    <body> 
+        <h1>hello</h1>
+    </body>
+
+    <footer></footer>
     
 </body>
 </html>
