--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git in a group</title>
 </head>
+<h1>Hi whats up with you gyus</h1>
 
 <body>
 </body>
