--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Git in a group</title>
 </head>
 <h1>Hi whats up with you gyus</h1>
-
+<div>divvvvvvvvvvvv</div>
+<p>Everythings good</p>
 <body>
 </body>
 
