--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Git in a group</title>
 </head>
 <h1>Hi whats up with you gyus</h1>
+<header>Heeeeeeeeeeeeeeeeejjjjjjjjjjjjjjjjjjj</header>
+<div>Noooooooooooooooooooooooooooo</div>
+<footer>Nooooooooooooooooooooooooooooooooooooooo</footer>
 
 <body>
 </body>
